@startuml
left to right direction
skinparam classAttributeIconSize 0
hide empty methods

package "model" {
  class Order <<entity>> {
    - order_id       : int
    - customer_id    : int
    - total_amount   : decimal
    - status         : String
    - payment_method : String
    - created_at     : Timestamp
    + getters/setters()
  }

  class OrderDetail <<entity>> {
    - order_id   : int
    - product_id : int
    - quantity   : int
    - unit_price : decimal
    + getters/setters()
  }
}

package "db" {
  class DBContext {
    - conn : Connection
    + getConnection() : Connection
  }
}

package "dao" {
  class OrderDAO <<dao>> {
    + findByCustomer(customer_id:int, status:String?, page:int, size:int) : List<Order>
    + countByCustomer(customer_id:int, status:String?) : int
    + getDetails(order_id:int) : List<OrderDetail>
  }
}

package "controller" {
  class OrderListServlet <<controller>> {
    - orderDAO : OrderDAO
    + doGet(req:HttpServletRequest, resp:HttpServletResponse) : void
  }
}

OrderDAO --|> DBContext
OrderListServlet ..> OrderDAO
OrderDAO ..> Order
OrderDAO ..> OrderDetail
@enduml
